2010/10/22: Done for day

--- a/package.yml
+++ b/package.yml
@@ -4,9 +4,15 @@ exports: "mootools-plus.js"
 
 sources:
   - "source/Plus/Plus.js"
+  - "source/Class/BindInstances.js"
   - "source/Class/Class.Static.js"
+  - "source/Class/StoredInstances.js"
   - "source/Element/Element.Delegation.Plus.js"
   - "source/Element/Element.Plus.js"
+  - "source/Request/Responses.js"
   - "source/Types/Array.Plus.js"
   - "source/Types/Function.Plus.js"
   - "source/Types/String.Plus.js"
+  - "source/Utilities/Cookie.Plus.js"
+  - "source/Utilities/HtmlOptions.js"
+  - "source/Utilities/NamedChain.js"
