Fixes to yaml headers

--- a/package.yml
+++ b/package.yml
@@ -5,9 +5,9 @@ exports: "mootools-plus.js"
 sources:
   - "source/Plus/Plus.js"
   - "source/Class/BindInstances.js"
-  - "source/Class/Class.Static.js"
+  - "source/Class/Class.Mutators.Static.js"
+  - "source/Class/Class.Mutators.StoredInstances.js"
   - "source/Class/HtmlOptions.js"
-  - "source/Class/StoredInstances.js"
   - "source/Element/Element.Delegation.Plus.js"
   - "source/Element/Element.Plus.js"
   - "source/Interface/Layer.js"
