--- a/package.yml
+++ b/package.yml
@@ -4,9 +4,9 @@ author: "Duc Tri Le"
 
 category: utilities
 
-tags: [mutator, element, event, layer, json]
+tags: [mutator, element, event, layer, json, autocomplete]
 
-current: 0.1
+current: 0.2
 
 exports: "mootools-plus.js"
 
@@ -18,6 +18,7 @@ sources:
   - "source/Class/HtmlOptions.js"
   - "source/Element/Element.Delegation.Plus.js"
   - "source/Element/Element.Plus.js"
+  - "source/Interface/AutoComplete.js"
   - "source/Interface/Layer.js"
   - "source/Request/Responses.js"
   - "source/Types/Array.Plus.js"
