--- a/package.yml
+++ b/package.yml
@@ -15,6 +15,7 @@ sources:
   - "source/Class/BindInstances.js"
   - "source/Class/Class.Mutators.Static.js"
   - "source/Class/Class.Mutators.StoredInstances.js"
+  - "source/Class/Singleton.js"
   - "source/Class/HtmlOptions.js"
   - "source/Element/Element.Delegation.Plus.js"
   - "source/Element/Element.Plus.js"
